# timm-cchess-reg

./: .gitignore  CLAUDE.md  README.md  convert_coreml.py  gemini_doc.md  main.py  pyproject.toml  skills-lock.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
colab/: cchess_reg_training.ipynb
docs/: mvp-cchess-reg-design.md
docs/superpowers/plans/: 2026-04-12-backbone-upgrade-fpn-plan.md
docs/superpowers/specs/: 2026-04-07-training-pipeline-design.md  2026-04-10-colab-resume-and-drive-sync-design.md  2026-04-12-backbone-upgrade-fpn-design.md
scripts/: merge_dataset.py
src/: dataset.py  evaluate.py  inference.py  model.py  train.py  visualize_transforms.py
src/transforms/: __init__.py  augment.py  base.py  copy_half.py  flip.py  mixup.py  perspective.py  pipeline.py  randaugment.py
